Updated Overwatch page

--- a/sub-cites/art/minecraftmk7.html
+++ b/sub-cites/art/minecraftmk7.html
@@ -11,7 +11,6 @@
 	<p class="center-whole">
 		<img class="minecraft-mk7"; src="minecraftmk7/20180319-001.jpg" >
 	</p>
-	<p class="center-whole">
 		<img class="minecraft-mk7"; src="minecraftmk7/20180319-002.jpg" >
 		<img class="minecraft-mk7"; src="minecraftmk7/20180319-003.jpg" >
 		<img class="minecraft-mk7"; src="minecraftmk7/20180319-004.jpg" >
@@ -46,6 +45,6 @@
 		<img class="minecraft-mk7"; src="minecraftmk7/20180319-033.jpg" >
 		<img class="minecraft-mk7"; src="minecraftmk7/20180319-034.jpg" >
 		
-	</p>
+	</div>
 </body>
 </html>
