--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -47,9 +47,9 @@
 			</div>
 		</div>
 		<div class="right-side">
-		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/28/Icon-winston.png?version=cd403f19c5ac9ac4ed0d41f41cc34dcc"> 
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/10/Icon-Soldier76.png?version=cc1fcbd8a1d814429f51c033422cd925">
+		<img class="overwatch-small overwatch-tank-main"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951"> 
+		<img class="overwatch-small overwatch-tank-off"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
+		<img class="overwatch-small overwatch-tank-off"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
 		</div>
 	</div>
 	<br>	
@@ -64,9 +64,9 @@
 			</div>
 		</div>
 		<div class="right-side">
-			<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a1/Icon-dva.png?version=fee2e13423f50ce58ea0bab606fe2248">
-			<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/95/Icon-doomfist.png?version=4bf9a60fe55a68350567d31762d3d0b6">		
-			<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/b/b1/Icon-hanzo.png?version=ebf7609cb8525e454bfac5511a804310">
+			<img class="overwatch-small overwatch-tank-main"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
+			<img class="overwatch-small overwatch-tank-off"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">		
+			<img class="overwatch-small overwatch-tank-off"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
 		</div>
 	</div>
 	<br>
@@ -77,7 +77,7 @@
 			<span class="gamertag-headline"> SoCcErNeMeSiS 8 </span>
 			<br>
 			<div class="white-outline">
-			Selfless teammate. Contantly watching teammates' health in order to give them the stamina to survive each battle.
+			Selfless teammate. Constantly monitoring teammates' health in order to provide the stamina for each battle.
 			</div>
 			<br>
 			<img src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/thumb/f/ff/Ability-tracer1.png/100px-Ability-tracer1.png?version=a4e4aa8a7ac9fcfa8051fe88db874698">
@@ -100,9 +100,21 @@
 	<br>
 	<div class="yellow-outline">
 		<div class="left-side">
-		<span class="support-headline-left"> Support </span><span class="player-headline-right"> ??? </span> <br><br>
+			<span class="filler-headline-left"> Filler </span><span class="player-headline-right"> Hugh </span>
+			<br>
+			<span class="pctag-headline"> pippinish33 </span>
+			<br>
+			<div class="white-outline">
+			PC player, so, like, basically garbage.
+			</div>
 		</div>
 		<div class="right-side">
+			<img class="overwatch-small overwatch-dps"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
+			<img class="overwatch-small overwatch-dps"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
+			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
+			<img class="overwatch-small overwatch-tank-main"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
+			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/0/03/Icon-Mercy.png?version=c413de7a7adb52cb89041b69e25f1908">
+			<img class="overwatch-small overwatch-heal"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
 		</div>
 	</div>
 	
