--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -89,8 +89,8 @@
 			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/0/03/Icon-Mercy.png?version=c413de7a7adb52cb89041b69e25f1908">
 			<img class="overwatch-small overwatch-tank-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a6/Icon-Brigitte.png?version=f28d5bc4e9af5cb2c5739cd33ed78e5f">
 			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/55/Icon-Moira.png?version=a7d7aa493b78acd027e506dcf71b6ab7">		
-			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/51/Icon-L%C3%BAcio.png?version=00047bcfa61bb22aec458c6135817eb8">
-			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3d/Icon-Ana.png?version=f4d5baa32624e0d74cfcb503c1219">
+			<img class="overwatch-small overwatch-heal-speed"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/51/Icon-L%C3%BAcio.png?version=00047bcfa61bb22aec458c6135817eb8">
+			<img class="overwatch-small overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3d/Icon-Ana.png?version=f4d5baa32624e0d74cfcb503c1219">
 			
 			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
 			<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/19/Icon-D.Va.png?version=d9cca350f6784e94a5bea36c7d012108">
@@ -100,7 +100,7 @@
 	<br>
 	<div class="yellow-outline">
 		<div class="left-side">
-			<span class="filler-headline-left"> Filler </span><span class="player-headline-right"> Hugh </span>
+			<span class="tank-headline-left"> Tank </span><span class="player-headline-mid"> Hugh </span><span class="support-headline-right"> Support </span> 
 			<br>
 			<span class="pctag-headline"> pippinish33 </span>
 			<br>
@@ -109,12 +109,12 @@
 			</div>
 		</div>
 		<div class="right-side">
-			<img class="overwatch-small overwatch-dps"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
-			<img class="overwatch-small overwatch-dps"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
 			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
-			<img class="overwatch-small overwatch-tank-main"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
+			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/8/83/Icon-Reinhardt.png?version=41a621bba6fede87578aa5aa413702c4">
+			<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/19/Icon-D.Va.png?version=d9cca350f6784e94a5bea36c7d012108">
+			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/55/Icon-Moira.png?version=a7d7aa493b78acd027e506dcf71b6ab7">
+			<img class="overwatch-small overwatch-heal-speed"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/51/Icon-L%C3%BAcio.png?version=00047bcfa61bb22aec458c6135817eb8">
 			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/0/03/Icon-Mercy.png?version=c413de7a7adb52cb89041b69e25f1908">
-			<img class="overwatch-small overwatch-heal"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
 		</div>
 	</div>
 	
