Switched Brandon and Hugh on Overwatch page

--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -70,6 +70,26 @@
 		</div>
 	</div>
 	<br>
+		<div class="blue-outline">
+		<div class="left-side">
+			<span class="tank-headline-left"> Tank </span><span class="player-headline-mid"> Hugh </span><span class="support-headline-right"> Support </span> 
+			<br>
+			<span class="pctag-headline"> pippinish33 </span>
+			<br>
+			<div class="white-outline">
+			PC player, so, like, basically garbage.
+			</div>
+		</div>
+		<div class="right-side">
+			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
+			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/8/83/Icon-Reinhardt.png?version=41a621bba6fede87578aa5aa413702c4">
+			<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/19/Icon-D.Va.png?version=d9cca350f6784e94a5bea36c7d012108">
+			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/55/Icon-Moira.png?version=a7d7aa493b78acd027e506dcf71b6ab7">
+			<img class="overwatch-small overwatch-heal-speed"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/51/Icon-L%C3%BAcio.png?version=00047bcfa61bb22aec458c6135817eb8">
+			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/0/03/Icon-Mercy.png?version=c413de7a7adb52cb89041b69e25f1908">
+		</div>
+	</div>
+	<br>
 	<div class="yellow-outline">
 		<div class="left-side">
 			<span class="support-headline-left"> Support </span><span class="player-headline-mid"> Brandon </span><span class="tank-headline-right"> Tank </span> 
@@ -96,28 +116,6 @@
 			<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/19/Icon-D.Va.png?version=d9cca350f6784e94a5bea36c7d012108">
 			<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
 		</div>
-	</div>
-	<br>
-	<div class="yellow-outline">
-		<div class="left-side">
-			<span class="tank-headline-left"> Tank </span><span class="player-headline-mid"> Hugh </span><span class="support-headline-right"> Support </span> 
-			<br>
-			<span class="pctag-headline"> pippinish33 </span>
-			<br>
-			<div class="white-outline">
-			PC player, so, like, basically garbage.
-			</div>
-		</div>
-		<div class="right-side">
-			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
-			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/8/83/Icon-Reinhardt.png?version=41a621bba6fede87578aa5aa413702c4">
-			<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/19/Icon-D.Va.png?version=d9cca350f6784e94a5bea36c7d012108">
-			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/55/Icon-Moira.png?version=a7d7aa493b78acd027e506dcf71b6ab7">
-			<img class="overwatch-small overwatch-heal-speed"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/51/Icon-L%C3%BAcio.png?version=00047bcfa61bb22aec458c6135817eb8">
-			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/0/03/Icon-Mercy.png?version=c413de7a7adb52cb89041b69e25f1908">
-		</div>
-	</div>
-	
-	
+	</div>	
 </body>
 </html>
