Added Overwatch logo on top of page

--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -7,7 +7,8 @@
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no"> -->
 </head>
 <body class="white-text">
-	<h1 class="center-whole"> Overwatch </h1>
+	<h1 class="center-whole"> OverWatch </h1>
+	<h2> <img class="small-pic overwatch-logo" src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951"> </h2>
 	<div class="red-outline">
 		<div class="left-side">
 			<span class="damage-headline-left"> Damage </span><span class="player-headline-right"> Logan </span> 
