Updated Pokemon BW rant

--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -27,12 +27,16 @@
 			<img height="250px" src="https://assets.pokemon.com/assets/cms2/img/video-games/video-games/pokemon_black_white_2/pokemon_black_white_2_main_169.jpg">
 		</div>
 		<div class="white-text">
-		Generation 5 is undoubtly the best generation. People mock the designs of the Pok&eacute;mon from that generation, but no matter what is said,
+		Generation 5 is undeniably the best generation. People mock the designs of the Pok&eacute;mon from that generation, but no matter what is said,
 		the designs will always be better than generation 1. Generation 5 took energy out of making every single design look <i> super cool </i>
 		and put it into creating the most original Pok&eacute;mon out of any generation ever. That's right, Generation 5 by itself included more original Pok&eacute;mon
-		then the "OG" region itself. Not to mention that generation 5 also included continuous animations during battle which hadn't been done before, 
-		creation of the Battle Spot for online battles, and of course, the best in-game story of any Pok&eacute;mon game so far. This is the only generation where the 
-		games following the original releases were <b>sequels</b>, rather than a simple remake of the same game with a few decent changes. </div>
+		then the treasured "OG" first region. Not to mention that generation 5 also included continuous animations during battle which hadn't been done before, 
+		creation of the Battle Spot for online battles, and of course, the best in-game story of any Pok&eacute;mon game so far. The titles Black and White are made out to be ironic,
+		as the player will learn through the story that life is not black or white, but is a <i> fusion </i> of different people and beliefs. Additionally, this is the only generation where the
+		second games following the original releases were sequels, rather than a simple remake of the same game with a few decent changes (with the exception to HeartGold
+		and SoulSilver, but those were remakes.) Lastly, Pok&eacute;mon Black and White addresses controversy over animal cruelty beliefs that have ridiculed the game.
+		It brings light to the feelings of Pok&eacute;mon and reminds us that there's more to the games than just battling. The player is a hero, not just because they
+		can defeat opponents, but because they do it with Pok&eacute that are happy throughout the adventure. That is the difference between a strong trainer and a hero. </div>
 	</div>
 	
 	
