Added gray boxes to Pokemon page

--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -15,6 +15,8 @@
 			<a href="https://serebii.net/" class="gray-button"> https://serebii.net/ </a>
 			<br><br>
 			<a href="https://pokemondb.net/" class="gray-button"> https://pokemondb.net/ </a>
+			<br><br>
+			<a href="https://www.smogon.com/" class="gray-button"> https://www.smogon.com/ </a>
 		<h2> Recent News </h2>
 		<h3> Pok&eacute;mon Coming to Switch!</h3>
 		<img width = "600px" src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fblogs-images.forbes.com%2Fdavidthier%2Ffiles%2F2018%2F05%2FDeaLp6fVMAEzguS.jpg">
@@ -45,30 +47,30 @@
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">
 			<br>
-			<span class="yellow-text"> Galvantula </span>
+			<span class="yellow-text gray-box"> Galvantula </span>
 		</div>
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/noivern.gif">
 			<br>
-			<span class="purple-text"> Noivern </span>	
+			<span class="purple-text gray-box"> Noivern </span>	
 		</div>
 		<br>
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/rotom-heat.gif">
 			<br>
-			<span class="red-orange-text"> Rotom-Heat </span>
+			<span class="red-orange-text gray-box"> Rotom-Heat </span>
 		</div>
 		<br>
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/klinklang.gif">
 			<br>
-			<span class="turquoise-text"> Klinklang </span>
+			<span class="turquoise-text gray-box"> Klinklang </span>
 		</div>
 		<br>
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif">
 			<br>
-			<span class="light-pink-text"> Sylveon </span>
+			<span class="light-pink-text gray-box"> Sylveon </span>
 		</div>
 		<br>
 		<div>
@@ -76,8 +78,9 @@
 			<br>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
 			<br>
-			<span class="white-text"> Medicham </span>
+			<span class="white-text gray-box"> Medicham
 			<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
+			</span>
 		</div>
 		
 		<br>
@@ -86,32 +89,32 @@
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/hippowdon.gif">
 			<br>
-			<span class="tan-text"> Hippowdon </span>
+			<span class="tan-text gray-box"> Hippowdon </span>
 		</div>
 		<br>
 		<div>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/gastrodon.gif">
+			<img src="https://play.pokemonshowdown.com/sprites/xyani/gastrodon-east.gif">
 			<br>
-			<span class="pink-text"> Gastrodon </span>	
+			<span class="turquoise-text gray-box"> Gastrodon </span>	
 		</div>
 		<br>
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/excadrill.gif">
 			<br>
-			<span class="maroon-text"> Excadrill </span>
+			<span class="maroon-text gray-box"> Excadrill </span>
 		</div>
 		<br>
 		<div>
 		<br>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/nidoking.gif">
 			<br>
-			<span class="purple-text"> Nidoking </span>
+			<span class="purple-text gray-box"> Nidoking </span>
 		</div>
 		<br>
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/gliscor.gif">
 			<br>
-			<span class="lavender-text"> Gliscor </span>
+			<span class="lavender-text gray-box"> Gliscor </span>
 		</div>
 		<br>
 		<div>
@@ -119,27 +122,28 @@
 			<br>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/garchomp-mega.gif">
 			<br>
-			<span class="draco-text"> Garchomp </span>
+			<span class="draco-text gray-box"> Garchomp
 			<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
+			</span>
 		</div>
 		
 		<h2 class="white-text"> Recent Team - Pok&eacute;mon Sun </h2>
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/toucannon.gif">
 			<br>
-			<span class="almost-black-text"> Toucannon </span>
+			<span class="almost-black-text gray-box"> Toucannon </span>
 		</div>
 		<br>
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc.gif">
 			<br>
-			<span class="tan-text"> Lycanroc </span>
+			<span class="tan-text gray-box"> Lycanroc </span>
 		</div>
 		<br>
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/ninetales-alola.gif">
 			<br>
-			<span class="white-text"> Ninetales </span>	
+			<span class="white-text gray-box"> Ninetales </span>	
 		</div>
 		<br>
 		<div>
@@ -147,19 +151,19 @@
 			<br>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/wishiwashi-school.gif">
 			<br>
-			<span class="light-blue-text"> Wishiwashi </span>
+			<span class="light-blue-text gray-box"> Wishiwashi </span>
 		</div>
 		<br>
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/palossand.gif">
 			<br>
-			<span class="sand-text"> Palossand </span>
+			<span class="sand-text gray-box"> Palossand </span>
 		</div>
 		<br>
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/incineroar.gif">
 			<br>
-			<span class="red-text"> Incineroar </span>
+			<span class="red-text gray-box"> Incineroar </span>
 		</div>
 	</div>	
 </body>
