Updated Overwatch page

--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -48,9 +48,12 @@
 			</div>
 		</div>
 		<div class="right-side">
-		<img class="overwatch-small overwatch-tank-main"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951"> 
-		<img class="overwatch-small overwatch-tank-off"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
-		<img class="overwatch-small overwatch-tank-off"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
+		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f8/Icon-Winston.png?version=3fe1e65e547fa377b0a67e9ae8521174"> 
+		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/8/83/Icon-Reinhardt.png?version=41a621bba6fede87578aa5aa413702c4">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/99/Icon-Junkrat.png?version=0464de1b14e271ba9068178dc92fc622">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/1c/Icon-Genji.png?version=82b57d7ca3f32cc4f7286d309db7a716">
+		<img class="overwatch-small overwatch-heal-speed"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/51/Icon-L%C3%BAcio.png?version=00047bcfa61bb22aec458c6135817eb8">
 		</div>
 	</div>
 	<br>	
@@ -78,7 +81,7 @@
 			<span class="pctag-headline"> pippinish33 </span>
 			<br>
 			<div class="white-outline">
-			PC player, so, like, basically garbage.
+			Flexible player who often fills in order to give the team what is needed to win.
 			</div>
 		</div>
 		<div class="right-side">
@@ -101,21 +104,15 @@
 			Selfless teammate. Constantly monitoring teammates' health in order to provide the stamina for each battle.
 			</div>
 			<br>
-			<img src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/thumb/f/ff/Ability-tracer1.png/100px-Ability-tracer1.png?version=a4e4aa8a7ac9fcfa8051fe88db874698">
-			<img src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/thumb/d/d1/Ability-zenyatta1.png/100px-Ability-zenyatta1.png?version=dc2b18b000e61cd671ae5966d43589c3">
-			<img src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/thumb/e/ea/Ability-mercy3.png/100px-Ability-mercy3.png?version=d614146d57c5661823120a615e3c6f72">
+			<img class="overwatch-small"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
 		</div>
 		<div class="right-side">
 			<img class="overwatch-small overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f7/Icon-Zenyatta.png?version=5067df480f689692dc522b679d9e3687">
 			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/0/03/Icon-Mercy.png?version=c413de7a7adb52cb89041b69e25f1908">
-			<img class="overwatch-small overwatch-tank-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a6/Icon-Brigitte.png?version=f28d5bc4e9af5cb2c5739cd33ed78e5f">
 			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/55/Icon-Moira.png?version=a7d7aa493b78acd027e506dcf71b6ab7">		
-			<img class="overwatch-small overwatch-heal-speed"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/51/Icon-L%C3%BAcio.png?version=00047bcfa61bb22aec458c6135817eb8">
-			<img class="overwatch-small overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3d/Icon-Ana.png?version=f4d5baa32624e0d74cfcb503c1219">
-			
+			<img class="overwatch-small overwatch-heal-speed"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/51/Icon-L%C3%BAcio.png?version=00047bcfa61bb22aec458c6135817eb8">	
+			<img class="overwatch-small overwatch-tank-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a6/Icon-Brigitte.png?version=f28d5bc4e9af5cb2c5739cd33ed78e5f">
 			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
-			<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/19/Icon-D.Va.png?version=d9cca350f6784e94a5bea36c7d012108">
-			<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
 		</div>
 	</div>	
 </body>
