Added Comparing Generations in Pokemon Page

--- a/sub-cites/piano.html
+++ b/sub-cites/piano.html
@@ -9,7 +9,7 @@
 <body>
 	<h1> Piano </h1>
 	<div class="center-whole">
-		<h2 class="white-text"> Songs I have Mastered </h2>
+		<h2 class="white-text"> Songs I Can Play </h2>
 
 		<h3> Pop </h3>
 		<ul class="cul">
@@ -22,6 +22,10 @@
 			<li> Route 10 </li>
 			<li> Undella Town (Autumn, Winter, Spring) </li>
 			<li> Unwavering Emotions </li>
+			</ul>
+		<h3> Pok&eacute;mon Sun and Moon </h3>
+			<ul class="cul">
+			<li> Seafolk Village (Night) </li>
 			</ul>
 		<h3> Pok&eacute;mon X and Y </h3>
 			<ul class="cul">
@@ -37,7 +41,7 @@
 			<li> Family </li>
 			<li> Space Junk Path </li>
 			</ul>
-		<h3> Super Smash Bros </h3>
+		<h3> Super Smash Bros Brawl </h3>
 		<ul class="cul">
 			<li> Final Destination * </li>
 		</ul>
@@ -61,5 +65,5 @@
 		</ul>
 	</div>
 </body>
-* Still working on it
+* Still practicing to perfect
 </html>
