Small formatting change on Pokemon and Overwatch pages

--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -19,13 +19,13 @@
 			Always locks in DPS and ... maybe ... gets some kills?
 			</div>
 		</div>
-		<div class="right-side">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/99/Icon-Junkrat.png?version=0464de1b14e271ba906">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Pharah.png?version=a0a08fbbb4e169a029baa071839d30a2">
-		<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/75/Icon-Zarya.png?version=e5cb43dd5f8314172d8b0c9f537ef2c9">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/54/Icon-Widowmaker.png?version=becc817c0208b989eb7fae437c95b752">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
-		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
+		<div class="right-side-ow">
+			<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/99/Icon-Junkrat.png?version=0464de1b14e271ba906">
+			<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Pharah.png?version=a0a08fbbb4e169a029baa071839d30a2">
+			<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/75/Icon-Zarya.png?version=e5cb43dd5f8314172d8b0c9f537ef2c9">
+			<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/54/Icon-Widowmaker.png?version=becc817c0208b989eb7fae437c95b752">
+			<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
+			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
 		</div>
 	</div>
 	<br>
@@ -33,7 +33,7 @@
 		<div class="left-side">
 		<span class="damage-headline-left"> Damage </span><span class="player-headline-right"> ??? </span> <br><br>
 		</div>
-		<div class="right-side">
+		<div class="right-side-ow">
 		</div>
 	</div>
 	<br>
@@ -47,7 +47,7 @@
 			Knowledgable on the topic of Overwatch. Good at making calls, choosing the right heroes for the job, and leading the team to victory.
 			</div>
 		</div>
-		<div class="right-side">
+		<div class="right-side-ow">
 		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f8/Icon-Winston.png?version=3fe1e65e547fa377b0a67e9ae8521174"> 
 		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/8/83/Icon-Reinhardt.png?version=41a621bba6fede87578aa5aa413702c4">
 		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/99/Icon-Junkrat.png?version=0464de1b14e271ba9068178dc92fc622">
@@ -67,7 +67,7 @@
 			A balanced player with strong abilities in gaming. Very easy to work with because of his serene mindset and lax nature.
 			</div>
 		</div>
-		<div class="right-side">
+		<div class="right-side-ow">
 			<img class="overwatch-small overwatch-tank-main"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
 			<img class="overwatch-small overwatch-tank-off"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">		
 			<img class="overwatch-small overwatch-tank-off"; src="https://vignette.wikia.nocookie.net/overwatch/images/b/bd/Overwatch_line_art_logo_symbol-only.png/revision/latest?cb=20141107210951">
@@ -84,7 +84,7 @@
 			Flexible player who often fills in order to give the team what is needed to win.
 			</div>
 		</div>
-		<div class="right-side">
+		<div class="right-side-ow">
 			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/11/Icon-Orisa.png?version=195559201b95da7ca53e601d90c7048e">
 			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/8/83/Icon-Reinhardt.png?version=41a621bba6fede87578aa5aa413702c4">
 			<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/19/Icon-D.Va.png?version=d9cca350f6784e94a5bea36c7d012108">
@@ -106,7 +106,7 @@
 			<br>
 			<img class="overwatch-small"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/29/Icon-Tracer.png?version=00ee5c983b180f64d687f3d0945e90f4">
 		</div>
-		<div class="right-side">
+		<div class="right-side-ow">
 			<img class="overwatch-small overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f7/Icon-Zenyatta.png?version=5067df480f689692dc522b679d9e3687">
 			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/0/03/Icon-Mercy.png?version=c413de7a7adb52cb89041b69e25f1908">
 			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/5/55/Icon-Moira.png?version=a7d7aa493b78acd027e506dcf71b6ab7">		
