Revert "Small formatting change on Pokemon and Overwatch pages"
This reverts commit af2b57e852bae2ecdf2b8e3a1599f95fdd44cfb6.

--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -112,7 +112,7 @@
 	</div>
 	
 	
-	<div class="right-side-poke white-outline center-whole">
+	<div class="right-side white-outline center-whole">
 		<h2 class="white-text"> The Main Team </h2>
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">
